# Controlpp

./: .gitignore  BaseTypeArithmetic.hpp  CMakeLists.txt  ContinuousTransferFunction.hpp  DiscreteTransferFunction.hpp  Doxyfile  LICENSE  Makefile  Matrix.hpp  MatrixFunctions.hpp  MatrixRef.hpp  MatrixToken.hpp  Polynom.hpp  README.md  RationalPolynom.hpp  TODO.md  Vector.hpp  approximations.hpp  compare.m  definitions.hpp  step.csv  test.cpp
.github/workflows/: test_with_clang.yml  test_with_gcc.yml
Matrix/: ConstMatrixRef.hpp  Matrix.hpp  MatrixFunctions.hpp  MatrixRef.hpp  MatrixTraits.hpp  MatrixType.hpp
Vector/: ConstVectorRef.hpp  Vector.hpp  VectorFunctions.hpp  VectorRef.hpp  VectorToken.hpp  VectorTraits.hpp  VectorType.hpp
dox/: loop_shaping_from_data.dox
dox/siso_feed_forward/: lqr_controller.dox  siso_feed_forward.dox
include/: controlpp.hpp
include/controlpp/: BilinearStateSpace.hpp  BilinearTransferFunction.hpp  Bode.hpp  ContinuousStateSpace.hpp  ContinuousTransferFunction.hpp  DiscreteController.hpp  DiscreteFilter.hpp  DiscreteStateSpace.hpp  DiscreteStateSpaceFilter.hpp  DiscreteTransferFunction.hpp  Estimators.hpp  FrequencyResponse.hpp  Generator.hpp  H2Controller.hpp  KalmanFilter.hpp  LQRController.hpp  Pade.hpp  Polynom.hpp  Polynomial.hpp  RationalPolynom.hpp  RationalPolynomial.hpp  StateSpace.hpp  TimeSeries.hpp  TimeVariantControl.hpp  TransferFunction.hpp  algorithm.hpp  analysis.hpp  conversion.hpp  math.hpp  transformations.hpp
src/: Bode.cpp  sources.cmake
tests/: Bode_Tests.cpp  Estimators_Tests.cpp  Generator_Tests.cpp  H2Controller_Tests.cpp  KalmanFilter_Tests.cpp  LQRController_Tests.cpp  Pade_Tests.cpp  Polynom_Tests.cpp  StateSpace_Tests.cpp  TimeVariantControl_Simulation.ipynb  TimeVariantControl_Test.cpp  Transformation_Tests.cpp  algorithm_Tests.cpp  analysis_Tests.cpp  main.cpp  math_Tests.cpp  sources.cmake
